--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>Eligio aprehendiendo</h1>
-      <a src="pag1">página 1</a>
+      <a href="pag1">página 1</a>
     </header>
   </body>
   
