--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
       <h1>Eligio aprehendiendo</h1>
       <a href="pag1">página 1</a>
+      <a href="pag2">página 2</a>
     </header>
   </body>
   
